syntax = "proto3";
package coprocessor_v2;

import "errorpb.proto";
import "kvrpcpb.proto";
import "gogoproto/gogo.proto";
import "rustproto.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (rustproto.lite_runtime_all) = true;

option java_package = "org.tikv.kvproto";

message RawCoprocessorRequest {
    kvrpcpb.Context context = 1;

    string copr_name = 2;
    string copr_version_constraint = 3;

    bytes data = 4;
}

message RawCoprocessorResponse {
    bytes data = 1;

    errorpb.Error region_error = 2;
    
    // Error message for cases like if no coprocessor with a matching name is found
    // or on a version mismatch between plugin_api and the coprocessor.
    string other_error = 4;
}
